--- a/package.json
+++ b/package.json
@@ -1,41 +1,53 @@
 {
-  "name": "yobi-chrome",
-  "version": "0.1.0",
-  "description": "Yobi chrome extension",
+  "name": "social-comments-gpt",
+  "version": "1.0.0",
+  "description": "social-comments-gpt",
   "main": "index.js",
   "scripts": {
-    "local": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --env=local --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "staging": "cross-env NODE_ENV=staging node_modules/webpack/bin/webpack.js --progress --env=staging --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --env=production --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "dev": "npm run local",
-    "prod": "npm run production",
-    "watch": "npm run local -- --watch"
+    "watch": "webpack --config webpack/webpack.dev.js --watch",
+    "build": "webpack --config webpack/webpack.prod.js",
+    "clean": "rimraf dist",
+    "test": "npx jest",
+    "style": "prettier --write \"src/**/*.{ts,tsx}\""
   },
+  "author": {
+    "name": "Christian Lou Cepe",
+    "email": "chcepe@gmail.com",
+    "url": "https://chcepe.github.io"
+  },
+  "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://git.yib.io/yobi/integrations/yobi-chrome.git"
+    "url": "https://github.com/chcepe/social-comments-gpt.git"
   },
-  "keywords": [
-    "chrome",
-    "extension",
-    "yobi"
-  ],
-  "author": "Ilyes chouia",
-  "license": "PRIVATE",
   "dependencies": {
-    "axios": "^0.26.1",
-    "lodash": "^4.17.21",
-    "vue-router": "^4.0.15"
+    "notyf": "^3.10.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-textarea-autosize": "^8.4.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
-    "@types/chrome": "^0.0.180",
-    "@types/webpack-env": "^1.16.3",
-    "@vue/compiler-sfc": "^3.2.32",
-    "cross-env": "^7.0.3",
-    "laravel-mix": "^6.0.43",
-    "types": "^0.1.1",
-    "vue": "^3.2.32",
-    "vue-loader": "^17.0.0",
-    "vue-template-compiler": "^2.6.14"
+    "@types/chrome": "0.0.158",
+    "@types/jest": "^27.0.2",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/styled-components": "^5.1.26",
+    "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^6.7.3",
+    "glob": "^7.1.6",
+    "jest": "^27.2.1",
+    "prettier": "^2.2.1",
+    "rimraf": "^3.0.2 ",
+    "style-loader": "^3.3.1",
+    "ts-jest": "^27.0.5",
+    "ts-loader": "^8.0.0",
+    "typescript": "^4.4.3 ",
+    "webpack": "^5.61.0",
+    "webpack-cli": "^4.0.0",
+    "webpack-merge": "^5.0.0"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
