--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
 
-  "name": "Social Comments GPT",
-  "description": "Create engaging comments on social media, powered by ChatGPT",
+  "name": "Social Synth",
+  "description": "Create engaging comments and posts on social media, powered by Yobi Social Synth",
   "version": "1.6",
 
   "icons": {
