--- a/public/manifest.json
+++ b/public/manifest.json
@@ -33,6 +33,8 @@
       "include_globs": [
         "*://*.linkedin.com/*",
         "*://linkedin.com/*",
+        "*://*.facebook.com/*",
+        "*://facebook.com/*",
         "*://*.instagram.com/*",
         "*://instagram.com/*",
         "*://*.twitter.com/*",
