--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "social-comments-gpt",
-  "version": "1.0.0",
-  "description": "social-comments-gpt",
+  "name": "social-yobi",
+  "version": "0.0.1",
+  "description": "social-yobi",
   "main": "index.js",
   "scripts": {
     "watch": "webpack --config webpack/webpack.dev.js --watch",
